--- a/css/textuality.css
+++ b/css/textuality.css
@@ -1,86 +1,175 @@
-#textuality {
-	height: 100%;
-	width: 100%;
-}
-
-.header {
-	position: fixed;
-	top: 0px;
-	width: 100%;
-	padding: 5px 50px 0;
-	border-bottom: 4px solid rgba(150,125,100,.3);
-	height: 100px;
-	background-color: rgba(0,0,0,.5);
-}
-
-.main {
-	position: absolute;
-	width: 100%;
-}
-
-#texts {
-	padding: 5px 0;
-	width: 60%;
-}
-
-.text-msg {
-	font-size: 20px;
-	margin-bottom: 10px;
-	display: table;
-}
-
-.text-msg-left, .text-msg-right {
-	display: table-cell;
-	vertical-align: middle;
-	padding: 0 10px;
-}
-
-.text-msg-left {
-	width: 150px;
-}
-
-.text-alias {
-	font-weight: bold;
-}
-
-.text-timestamp {
-	font-style: italic;
-}
-
-.footer {
-	position: fixed;
-	bottom: 0px;
-	width: 100%;
-	border-top: 4px solid rgba(150,125,100,.3);
-	height: 100px;
-	background-color: rgba(0,0,0,.5);
-}
-
-#schedule-module {
-	width: 70%;
-}
-
-.schedule-label {
-	width: 25%;
-	float: left;
-	font-weight: bold;
-	font-size: 20px;
-	padding: 3px 0;
-	color: #DB7;
-	opacity: .4;
-}
-
-.schedule-label:first-child {
-	opacity: 1;
-}
-
-.schedule-item {
-	width: 25%;
-	float: left;
-	font-size: 28px;
-	opacity: .4;
-}
-
-.schedule-item:first-child {
-	opacity: 1;
+#textuality {
+
+	height: 100%;
+
+	width: 100%;
+
+}
+
+
+
+.header {
+
+	position: fixed;
+
+	top: 0px;
+
+	width: 100%;
+
+	padding: 5px 50px 0;
+
+	border-bottom: 4px solid rgba(150,125,100,.3);
+
+	height: 100px;
+
+	background-color: rgba(0,0,0,.5);
+
+}
+
+
+
+.main {
+
+	position: absolute;
+
+	width: 100%;
+	background-color: black;
+
+}
+
+
+
+#texts {
+
+	padding: 5px 0;
+
+	width: 60%;
+
+}
+
+
+.text-scroller{
+	padding:20px;
+}
+.text-msg {
+
+	font-size: 24px;
+	margin-bottom: 10px;
+	display: table;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+
+}
+
+
+
+.text-msg-left, .text-msg-right {
+
+	display: table-cell;
+
+	vertical-align: middle;
+
+	padding: 0 10px;
+
+}
+
+
+
+.text-msg-left {
+
+	width: 150px;
+
+}
+
+
+
+.text-alias {
+
+	font-weight: bold;
+	color: #DB7;
+	font-size:20px;
+
+}
+
+
+
+.text-timestamp {
+
+	font-size: 14px;
+
+}
+
+
+
+.footer {
+
+	position: fixed;
+
+	bottom: 0px;
+
+	width: 100%;
+
+	border-top: 4px solid rgba(150,125,100,.3);
+
+	height: 100px;
+
+	background-color: rgba(0,0,0,.5);
+
+}
+
+
+
+#schedule-module {
+
+	width: 70%;
+
+}
+
+
+
+.schedule-label {
+
+	width: 25%;
+
+	float: left;
+
+	font-weight: bold;
+
+	font-size: 20px;
+
+	padding: 3px 0;
+
+	color: #DB7;
+
+	opacity: .4;
+
+}
+
+
+
+.schedule-label:first-child {
+
+	opacity: 1;
+
+}
+
+
+
+.schedule-item {
+
+	width: 25%;
+
+	float: left;
+
+	font-size: 28px;
+
+	opacity: .4;
+
+}
+
+
+
+.schedule-item:first-child {
+
+	opacity: 1;
+
 }
