Fixing small errors

--- a/client/views/aliases_page.html
+++ b/client/views/aliases_page.html
@@ -40,7 +40,7 @@
 <template name="aliasesList">
 	<div>
 		{{#each aliases}}
-			<li class="label admin-alias {{aliasClass}}" data-alias="{{_id}}">{{_id}} <span class="alias-delete"><i class="icon-remove"></i></span></span>
+			<li class="label admin-alias {{aliasClass}}" data-alias="{{_id}}">{{_id}} <span class="alias-delete"><i class="icon-remove"></i></span></li>
 		{{/each}}}
 	</div>	
 </template>
