--- a/client/views/in_texts_table.html
+++ b/client/views/in_texts_table.html
@@ -24,7 +24,7 @@
 		<td>{{body}}</td>
 		<td>{{moderation}}</td>
 		<td>{{purpose}}</td>
-		<td>{{timeRelative time}} <span class="actual-time" style="white-space:nowrap;">{{timeAbsolute time}}</td>
+		<td>{{timeRelative time}} <span class="actual-time" style="white-space:nowrap;">{{timeAbsolute time}}</span></td>
 		<td>{{#unless isMaster}}<button class="intext-reply btn btn-mini" data-toggle="modal" data-target="#composeText">Reply</button>{{/unless}}</td>
 	</tr>
 </template>
