--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -13,7 +13,7 @@
 			</ul>
 			<div class="pull-right">
 				<button class="btn btn-info" data-toggle="modal" data-target="#composeText">Send Text</button>
-			</ul>
+			</div>
 		</div>
 	</div>
 	{{/unless}}
