Fixing more errors

--- a/client/views/out_texts_table.html
+++ b/client/views/out_texts_table.html
@@ -23,6 +23,6 @@
 		<td>{{#each participants}} {{status}}<br /> {{/each}}</td>		
 		<td>{{body}}</td>
 		<td>{{purpose}}</td>
-		<td>{{timeRelative time}} <span class="actual-time" style="white-space:nowrap;">{{timeAbsolute time}}</td>
+		<td>{{timeRelative time}} <span class="actual-time" style="white-space:nowrap;">{{timeAbsolute time}}</span></td>
 	</tr>
 </template>
