--- a/client/views/checkpoints_page.html
+++ b/client/views/checkpoints_page.html
@@ -43,6 +43,8 @@
 			<button class="checkins-clearall-btn btn btn-warning">Reset Checkins</button>
 		</div>
 	</div>
+	
+	</div>
 </template>
 
 <template name="checkpointsTable">
