Fixing last error (I hope)

--- a/client/views/participant_activity_table.html
+++ b/client/views/participant_activity_table.html
@@ -20,7 +20,7 @@
 
 <template name="participantActivityRow">
 	<tr class="{{rowClass}}">
-		<td>{{#if alias}}<i class="icon-arrow-right"></i>{{else}}<i class="icon-arrow-left">{{/if}}</td>
+		<td>{{#if alias}}<i class="icon-arrow-right"></i>{{else}}<i class="icon-arrow-left"></i>{{/if}}</td>
 		<td>{{body}}</td>
 		<td>--</td>
 		<td>--</td>
