Oh for fuck's sake

--- a/client/views/participant_activity_table.html
+++ b/client/views/participant_activity_table.html
@@ -24,7 +24,7 @@
 		<td>{{body}}</td>
 		<td>--</td>
 		<td>--</td>
-		<td>{{timeRelative time}} <span class="actual-time">{{timeAbsolute time}}</td>
+		<td>{{timeRelative time}} <span class="actual-time">{{timeAbsolute time}}</span></td>
 		<td><div class="btn-group"><button class="btn btn-mini"><i class="icon-star-empty"></i></button></div></td>
 	</tr>
 </template>
