--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -1,20 +1,35 @@
-<template name="header">
-	{{#unless isAudienceScreen}}
-	<div id="ta-header" class="navbar navbar-static-top">
-		<div class="navbar-inner">
-			<a class="brand" href="{{textsPagePath}}">Textuality</a>
-			<ul id="ta-nav" class="nav">
-				<li class="{{isPage 'textsPage'}}"><a href="{{textsPagePath}}">Texts</a></li>
-				<li class="{{isPage 'participantsPage'}}"><a href="{{participantsPagePath}}">Participants</a></li>
-				<li class="{{isPage 'checkpointsPage'}}"><a href="{{checkpointsPagePath}}">Checkpoints</a></li>
-				<li class="{{isPage 'aliasesPage'}}"><a href="{{aliasesPagePath}}">Aliases</a></li>
-				<li class="{{isPage 'autoTextsPage'}}"><a href="{{autoTextsPagePath}}">AutoTexts</a></li>
-				<li class="{{isPage 'screenControlPage'}}"><a href="{{screenControlPagePath}}">System Control</a></li>
-			</ul>
-			<div class="pull-right">
-				<button class="btn btn-info" data-toggle="modal" data-target="#composeText">Send Text</button>
+<template name="adminHeader">
+	<nav id="ta-header" class="navbar navbar-default navbar-static-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#ta-nav-items">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Textuality</a>
+			</div>
+
+			<div class="collapse navbar-collapse" id="ta-nav-items">
+				<ul class="nav navbar-nav">
+					<li class="{{isPage 'textsPage'}}"><a href="{{pathFor 'adminInTexts'}}">Texts</a></li>
+					<li class="{{isPage 'participantsPage'}}"><a href="{{pathFor 'adminParticipants'}}">Participants</a></li>
+					<li class="{{isPage 'screenControlPage'}}"><a href="{{pathFor 'screenControl'}}">Screen Control</a></li>					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Scripting <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li class="{{isPage 'aliasesPage'}}"><a href="{{pathFor 'adminAliases'}}">Aliases</a></li>
+							<li class="{{isPage 'autoTextsPage'}}"><a href="{{pathFor 'adminAutoTexts'}}">AutoTexts</a></li>
+							<li class="{{isPage 'badgesPage'}}"><a href="{{pathFor 'adminCheckpoints'}}">Badges</a></li>
+							<li class="{{isPage 'checkpointsPage'}}"><a href="{{pathFor 'adminCheckpoints'}}">Checkpoints</a></li>
+						</ul>
+					</li>
+					<li class="{{isPage 'screenControlPage'}}"><a href="{{screenControlPagePath}}">System</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">571-989-4785</a></li>
+				</ul>
 			</div>
 		</div>
-	</div>
-	{{/unless}}
+	</nav>
 </template>
