Wednesday night push

--- a/client/views/admin/textsPage.html
+++ b/client/views/admin/textsPage.html
@@ -1,10 +1,8 @@
 <template name="adminTexts">
 	<div class="row">		
 		<div class="col-md-9 col-sm-8">
-			<h3>All Texts <span class="title-status">{{totalInTexts}} received, {{totalOutTexts}} sent</span></h3>
-			{{#with allTexts}}
-				{{> adminTextsTable}}
-			{{/with}}
+			<h2>All Texts <span class="title-status">{{totalInTexts}} received, {{totalOutTexts}} sent</span></h2>
+			{{> adminTextsTable allTexts}}
 		</div>
 		<div class="col-md-3 col-sm-4">
 			{{> adminComposeText}}
