--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -13,8 +13,8 @@
 
 			<div class="collapse navbar-collapse" id="ta-nav-items">
 				<ul class="nav navbar-nav">
-					<li class="{{isPage 'textsPage'}}"><a href="{{pathFor 'adminInTexts'}}">Texts</a></li>
-					<li class="{{isPage 'participantsPage'}}"><a href="{{pathFor 'adminParticipants'}}">Participants</a></li>
+					<li class="{{isPage 'adminTexts'}}"><a href="{{pathFor 'adminTexts'}}">Texts</a></li>
+					<li class="{{isPage 'adminParticipants'}}"><a href="{{pathFor 'adminParticipants'}}">Participants</a></li>
 					<li class="{{isPage 'screenControlPage'}}"><a href="{{pathFor 'screenControl'}}">Screen Control</a></li>					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Scripting <b class="caret"></b></a>
 						<ul class="dropdown-menu">
