--- a/client/views/auto_texts_page.html
+++ b/client/views/auto_texts_page.html
@@ -1,13 +1,13 @@
 <template name="autoTextsPage">
 	<div class="container-fluid">
 
-	<div class="row-fluid">
+	<div class="row">
 		<div class="span12">
 			<h2>Autotexts</h2>
 		</div>
 	</div>
 
-	<div class="row-fluid">
+	<div class="row">
 
 		<div class="span9">
 			{{> autoTextsTable}}
