--- a/client/views/checkpoints_page.html
+++ b/client/views/checkpoints_page.html
@@ -3,7 +3,7 @@
 
 	{{#isolate}}
 
-	<div class="row-fluid">
+	<div class="row">
 		<div class="span12">
 			<h2>Checkpoints<span class="title-status">{{numCheckpoints}} checkpoints, {{numCheckins}} checkins</span></h2>
 		</div>
@@ -11,7 +11,7 @@
 
 	{{/isolate}}
 
-	<div class="row-fluid">
+	<div class="row">
 	{{#isolate}}
 
 		<div class="span9">
