--- a/client/views/participant_page.html
+++ b/client/views/participant_page.html
@@ -2,12 +2,12 @@
 	{{#with currentParticipant}}
 	<div class="container-fluid">
 
-	<div class="row-fluid">		
+	<div class="row">		
 		<div class="span12">
 			<h2>Participant: {{_id}} / {{alias}}</h2>
 		</div>
 	</div>
-	<div class="row-fluid">
+	<div class="row">
 		<div class="span4">
 			<h4>Geographic info</h4>
 			<table class="table table-condensed">
