--- a/client/views/participants_page.html
+++ b/client/views/participants_page.html
@@ -1,7 +1,7 @@
 <template name="participantsPage">
 	<div class="container-fluid">
 
-	<div class="row-fluid">
+	<div class="row">
 		<div class="span12">
 			<h2>Participants<span class="title-status">{{participantsActive}} active, {{participantsTotal}} total</span></h2>
 			{{> participantsTable}}
