--- a/client/views/screen_control_page.html
+++ b/client/views/screen_control_page.html
@@ -1,7 +1,7 @@
 <template name="screenControlPage">
 	<div class="container-fluid">
 
-	<div class="row-fluid">
+	<div class="row">
 		<div class="span12">
 			<button class="event-reset-btn btn btn-warning">Reset Event</button>
 		</div>
