--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -12,20 +12,23 @@
 			</div>
 
 			<div class="collapse navbar-collapse" id="ta-nav-items">
+				{{#if isInRole 'admin'}}
 				<ul class="nav navbar-nav">
 					<li class="{{isPage 'adminTexts'}}"><a href="{{pathFor 'adminTexts'}}">Texts</a></li>
 					<li class="{{isPage 'adminParticipants'}}"><a href="{{pathFor 'adminParticipants'}}">Participants</a></li>
-					<li class="{{isPage 'screenControlPage'}}"><a href="{{pathFor 'screenControl'}}">Screen Control</a></li>					<li class="dropdown">
+					<li class="{{isPage 'adminScreenControl'}}"><a href="{{pathFor 'adminScreenControl'}}">Screen Control</a></li>
+					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Scripting <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li class="{{isPage 'aliasesPage'}}"><a href="{{pathFor 'adminAliases'}}">Aliases</a></li>
-							<li class="{{isPage 'autoTextsPage'}}"><a href="{{pathFor 'adminAutoTexts'}}">AutoTexts</a></li>
-							<li class="{{isPage 'badgesPage'}}"><a href="{{pathFor 'adminCheckpoints'}}">Badges</a></li>
-							<li class="{{isPage 'checkpointsPage'}}"><a href="{{pathFor 'adminCheckpoints'}}">Checkpoints</a></li>
+							<li class="{{isPage 'adminAliases'}}"><a href="{{pathFor 'adminAliases'}}">Aliases</a></li>
+							<li class="{{isPage 'adminAutoTexts'}}"><a href="{{pathFor 'adminAutoTexts'}}">AutoTexts</a></li>
+							<li class="{{isPage 'adminBadges'}}"><a href="{{pathFor 'adminBadges'}}">Badges</a></li>
+							<li class="{{isPage 'adminCheckpoints'}}"><a href="{{pathFor 'adminCheckpoints'}}">Checkpoints</a></li>
 						</ul>
 					</li>
-					<li class="{{isPage 'screenControlPage'}}"><a href="{{screenControlPagePath}}">System</a></li>
+					<li class="{{isPage 'adminSystem'}}"><a href="{{pathFor 'adminSystem'}}">System</a></li>
 				</ul>
+				{{/if}}
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">571-989-4785</a></li>
 				</ul>
