--- a/client/views/texts_page.html
+++ b/client/views/texts_page.html
@@ -1,7 +1,7 @@
 <template name="textsPage">
 	<div class="container-fluid">
 
-	<div class="row-fluid">		
+	<div class="row">		
 		<div class="span6">
 			<h2>Incoming Texts <span class="title-status">{{totalInTexts}}</span></h2>
 			{{> inTextsTable}}
