--- a/client/views/admin/aliasesPage.html
+++ b/client/views/admin/aliasesPage.html
@@ -9,8 +9,9 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-6">
 			<form class="alias-add-form form-inline" role="form">
-				<input type="text" class="form-control alias-add-text input-sm" />
+				<input type="text" class="text-character-count form-control alias-add-text input-sm" data-max-length="14" />
 				<button type="submit" class="alias-add-btn btn btn-sm btn-success">Add Alias</button>
+				<div class="text-character-counter" data-for="composeTextBody">14</div>
 			</form>
 		</div>
 		<div class="col-xs-12 col-sm-6">
