--- a/client/views/admin/textsTable.html
+++ b/client/views/admin/textsTable.html
@@ -5,8 +5,7 @@
 				<th></th>
 				<th>Participant</th>
 				<th>Body</th>
-				<th>Mod.</th>
-				<th>Purpose</th>
+				<th>Status</th>
 				<th>Time</th>
 				<th></th>
 			</tr>
@@ -24,9 +23,14 @@
 		<td>{{direction}}</td>
 		<td>{{alias}} <span class="phone-number">{{participant}}</span></td>
 		<td>{{body}}</td>
-		<td>{{moderation}}</td>
-		<td>{{purpose}}</td>
-		<td>{{timeRelative time}} <span class="actual-time" style="white-space:nowrap;">{{timeAbsolute time}}</span></td>
-		<td>{{#unless isMaster}}<button class="intext-reply btn btn-xs btn-default">Reply</button>{{/unless}}</td>
+		<td>{{status}}</td>
+		<td>{{timeRelative time}}</td>
+		<td class="text-button-cell">
+			{{#unless isMaster}}
+				<button class="text-table-favorite btn btn-xs btn-default"><i class="fa fa-circle{{#unless favorite}}-o{{/unless}} {{favoriteColorClass}}"></i></button>
+				<button class="text-table-mention btn btn-xs btn-default">@</button>
+				<button class="text-table-reply btn btn-xs btn-default"><i class="fa fa-reply"></i></button>
+			{{/unless}}
+		</td>
 	</tr>
 </template>
