--- a/client/views/admin/autoTextsPage.html
+++ b/client/views/admin/autoTextsPage.html
@@ -17,7 +17,7 @@
 </template>
 
 <template name="autoTextsTable">
-	<table class="table">
+	<table class="table table-striped badge-table">
 		<thead>
 			<tr>
 				<th>Type</th>
@@ -41,7 +41,7 @@
 		<td>{{number}}</td>
 		<td>{{destination}}</td>
 		<td>{{body}}</td>
-		<td><button class="btn btn-mini btn-danger autotext-delete">Delete</button></td>
+		<td><button class="btn btn-sm btn-danger autotext-delete">Delete</button></td>
 	</tr>
 </template>
 
