--- a/client/views/screen/screenFeed.html
+++ b/client/views/screen/screenFeed.html
@@ -7,14 +7,15 @@
 </template>
 
 <template name="screenFeedItem">
-		<div class="texts-feed-item {{textClass}} notransition">
+		<div class="texts-feed-item {{textClass}} notransition" style="display: none;">
 		<div class="texts-feed-meta">
-			<div class="texts-feed-name">{{alias}}</div>
+			<div class="texts-feed-name">{{#if isMaster}}<i class="fa fa-heart"></i> {{/if}}{{alias}}{{#if isMaster}} <i class="fa fa-heart"></i>{{/if}}</div>
 			<div class="texts-feed-badges">
 				{{#each badges}}
 					<i class="fa {{icon}}" style="color:{{color}}"></i>
 				{{/each}}
 			</div>
+			{{#unless isMaster}}
 			<div class="texts-feed-achievements">
 				<div class="texts-feed-achievement empty"></div>
 				<div class="texts-feed-achievement empty"></div>
@@ -27,6 +28,7 @@
 				<div class="texts-feed-achievement empty"></div>
 				<div class="texts-feed-achievement empty"></div>
 			</div>
+			{{/unless}}
 		</div>
 		<div class="texts-feed-text rel-time-data" data-utc="{{timeUtc}}" data-reltime="{{timeRelative time true}}">{{bodyFormatted}}</div>
 	</div>				
