--- a/client/views/screen/mova.html
+++ b/client/views/screen/mova.html
@@ -9,6 +9,7 @@
 		<div class="tscreen-phone-number">571-989-4785</div>
 	</div>
 	{{>screenFooter}}
-	<div class="tscreen-overlays">
+	<div class="tscreen-overlay">
+		<div class="action-text">{{actionText}}</div>
 	</div>
 </template>
