--- a/client/views/admin/screenControlPage.html
+++ b/client/views/admin/screenControlPage.html
@@ -27,7 +27,7 @@
 				<div class="input-group">
 					<input type="text" class="form-control" value="{{value}}" name="{{_id}}">
 					<span class="input-group-btn">
-						<button class="btn btn-primary" type="button">Save</button>
+						<button class="btn btn-primary" type="submit">Save</button>
 					</span>
 				</div>
 			</div>
