--- a/textuality-app/client/views/includes/adminHeader.html
+++ b/textuality-app/client/views/includes/adminHeader.html
@@ -18,8 +18,8 @@
 					<li class="{{isPage 'adminParticipants'}}"><a href="{{pathFor 'adminParticipants'}}">Participants</a></li>
 					<li class="{{isPage 'adminScreenControl'}}"><a href="{{pathFor 'adminScreenControl'}}">Screen Control</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Scripting <b class="caret"></b></a>
-						<ul class="dropdown-menu">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Scripting <b class="caret"></b></a>
+						<ul class="dropdown-menu" role="menu">
 							<li class="{{isPage 'adminAliases'}}"><a href="{{pathFor 'adminAliases'}}">Aliases</a></li>
 							<li class="{{isPage 'adminAutoTexts'}}"><a href="{{pathFor 'adminAutoTexts'}}">AutoTexts</a></li>
 							<li class="{{isPage 'adminBadges'}}"><a href="{{pathFor 'adminBadges'}}">Badges</a></li>
